tests/security/taintSpecializedMethod/output.txt
ERROR: TaintedData - input.hack:8:6 - Data from a URL query string found its way to an HTML tag